# titan-industry-40

./: .gitignore  README.md  start.bat
backend/go-collector/: main.go
backend/rust-inference/: Cargo.toml
backend/rust-inference/src/: main.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: Reactor3D.tsx
public/model/: reactor.glb
