[package]
name = "titan-inference"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tokio-tungstenite = "0.20"
warp = "0.3"  # WebSocket
chrono = "0.4.44"

[profile.release]
opt-level = 3
lto = true

chrono = "0.4" 
